--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -25,21 +25,45 @@ ext {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 33
+    buildToolsVersion '33.0.3'
 
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 1
         versionName "2.8.2"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java']
+        }
     }
 
 }
 
 dependencies {
-    compile 'com.github.barteksc:pdfium-android:1.7.1'
+    implementation 'androidx.core:core:1.10.1'
+    implementation 'androidx.annotation:annotation:1.6.0' 
+    implementation 'com.github.barteksc:pdfium-android:1.9.0'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+task generateJar(type: Jar) {
+    from {
+        // Include compiled classes and resources
+        android.libraryVariants.collect { variant ->
+            variant.javaCompileProvider.get().destinationDirectory
+        }
+    }
+    archiveBaseName.set('android-pdf-viewer')
+    archiveVersion.set('2.8.2')
+    destinationDirectory.set(file("$buildDir/libs"))
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE // Exclude duplicate entries
+}
+
