--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,37 @@
+apply plugin: 'com.android.library'
 
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://groovy.jfrog.io/artifactory/libs-release/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        //classpath 'com.android.tools.build:gradle:2.3.3'
+        // classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://groovy.jfrog.io/artifactory/libs-release/' }
+    }
+}
+
+android {
+    compileSdkVersion 30
+    defaultConfig {
+        minSdkVersion 16
+        targetSdkVersion 30
+        versionCode 1
+        versionName "2.8.2"
     }
 }
