--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,36 +1,29 @@
-buildscript {
-    repositories {
-        jcenter()
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 30
+    defaultConfig {
+        applicationId "com.example.sample"
+        minSdkVersion 16
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
     }
-    dependencies {
-        // replace with the current version of the android-apt plugin
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
 repositories {
-    jcenter()
-}
-
-apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-
-android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
-
-    defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 25
-        versionCode 3
-        versionName "2.0.0"
-    }
-
+    google()
+    mavenCentral() // Replaced jcenter()
 }
 
 dependencies {
-    compile project(':android-pdf-viewer')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    provided 'org.androidannotations:androidannotations:4.0.0'
-    compile 'org.androidannotations:androidannotations-api:4.0.0'
+    implementation project(':android-pdf-viewer')
+    implementation 'com.github.barteksc:pdfium-android:1.7.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.x' // Example for annotation processors
 }
